clusters/homelab/namespaces/observability/kube-prometheus/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: observability
  annotations:
    tailscale.com/proxy-group: ts-ingress
spec:
  defaultBackend:
    service:
      name: prometheus-prometheus
      port:
        number: 9090
  ingressClassName: tailscale
  tls:
    - hosts:
        - prometheus
